--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
     <title>Color Theme</title>
 </head>
@@ -12,10 +15,15 @@
         <nav class="navbar">
             <div class="flex-container">
                 <input class="color-picker" type="color">
-                <select class="scheme-picker">
-            
+                <select name="schemes" id="schemes" class="scheme-picker">
+                    <option value="monochrome"> Monochrome </option>
+                    <option value="monochrome-dark"> Monochrome-dark </option> 
+                    <option value="monochrome-light">Monochrome-light</option> 
+                    <option value="analogic-complement">Analogic-complement</option> 
+                    <option value="triad">Triad</option> 
+                    <option value="quad">Quad</option>
                 </select>
-            <button id="button" class="btn"> Get Color Scheme </button>
+                <button id="button" class="btn"> Get color scheme </button>
             </div>            
         </nav>
         <div class="flex-container large">
@@ -26,11 +34,11 @@
             <div class="color-display color-4"></div>
         </div>
         <div class="flex-container small">
-            <div class="color-code"></div>
-            <div class="color-code"></div>
-            <div class="color-code"></div>
-            <div class="color-code"></div>
-            <div class="color-code"></div>
+            <div class="color-code"> #FFFFFF </div>
+            <div class="color-code"> #FFFFFF </div>
+            <div class="color-code"> #FFFFFF </div>
+            <div class="color-code"> #FFFFFF </div>
+            <div class="color-code"> #FFFFFF </div>
         </div>
     </div>
     <script src="./index.js"></script>
