--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <div id="container">
         <nav class="navbar">
             <div class="flex-container">
-                <input class="color-picker" type="color">
+                <input class="color-picker" value="#ffffff" id="colorPicker" type="color">
                 <select name="schemes" id="schemes" class="scheme-picker">
                     <option value="monochrome"> Monochrome </option>
                     <option value="monochrome-dark"> Monochrome-dark </option> 
-                    <option value="monochrome-light">Monochrome-light</option> 
+                    <option value="monochrome-light">Monochrome-light</option>
+                    <option value="analogic">Analogic</option>
+                    <option value="complement">Complement</option> 
                     <option value="analogic-complement">Analogic-complement</option> 
                     <option value="triad">Triad</option> 
                     <option value="quad">Quad</option>
@@ -26,19 +28,19 @@
                 <button id="button" class="btn"> Get color scheme </button>
             </div>            
         </nav>
-        <div class="flex-container large">
-            <div class="color-display color-0"></div>
+        <div class="flex-container large" id="colors-container">
+            <!-- <div class="color-display color-0"></div>
             <div class="color-display color-1"></div>
             <div class="color-display color-2"></div>
             <div class="color-display color-3"></div>
-            <div class="color-display color-4"></div>
+            <div class="color-display color-4"></div> -->
         </div>
         <div class="flex-container small">
+            <!-- <div class="color-code"> #FFFFFF </div>
             <div class="color-code"> #FFFFFF </div>
             <div class="color-code"> #FFFFFF </div>
             <div class="color-code"> #FFFFFF </div>
-            <div class="color-code"> #FFFFFF </div>
-            <div class="color-code"> #FFFFFF </div>
+            <div class="color-code"> #FFFFFF </div> -->
         </div>
     </div>
     <script src="./index.js"></script>
