--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="color-display color-3"></div>
             <div class="color-display color-4"></div> -->
         </div>
-        <div class="flex-container small">
+        <div class="flex-container small" id="codes-container">
             <!-- <div class="color-code"> #FFFFFF </div>
             <div class="color-code"> #FFFFFF </div>
             <div class="color-code"> #FFFFFF </div>
